# CloudHarvestPluginAws

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  authenticators.py  aws.py  collectors.py  docker-compose.yaml  exceptions.py  harvest.yaml  install_saml2aws.py  meta.json  meta.yaml  payload.yaml  pyproject.toml  requirements.txt  saml2aws.conf  saml2aws.config  setup.py  setup.sh  tasks.py  version
CloudHarvestPluginAws/: __register__.py  credentials.py  exceptions.py  meta.json  meta.py  pyproject.toml  tasks.py
CloudHarvestPluginAws/api/: README.md  __init__.py
CloudHarvestPluginAws/api/blueprints/: base.py
CloudHarvestPluginAws/api/blueprints/test/: routes.py
CloudHarvestPluginAws/authenticators/: README.md  __init__.py  file.py  functions.py  iam.py  saml2aws.py
CloudHarvestPluginAws/commands/: README.md  __init__.py  base.py
CloudHarvestPluginAws/commands/aws/: arguments.py  commandset.py
CloudHarvestPluginAws/reports/: README.md
CloudHarvestPluginAws/reports/aws/dms/: endpoints.yaml  events.yaml  instances.yaml  tasks.yaml
CloudHarvestPluginAws/reports/aws/rds/: clusters.yaml  events.yaml  instances.yaml
CloudHarvestPluginAws/services/: README.md  aws.rds.clusters.yaml
CloudHarvestPluginAws/services/aws/: tags.yaml
CloudHarvestPluginAws/services/aws/rds/: clusters.yaml
CloudHarvestPluginAws/tasks/: README.md  __init__.py  aws.py
CloudHarvestPluginAws/templates/: common.yaml
CloudHarvestPluginAws/templates/reports/aws/: regions.yaml
CloudHarvestPluginAws/templates/reports/aws/dms/: endpoints.yaml  events.yaml  instances.yaml  tasks.yaml
CloudHarvestPluginAws/templates/reports/aws/dynamodb/: indexes.yaml  tables.yaml
CloudHarvestPluginAws/templates/reports/aws/ec2/: instance-types.yaml  instances.yaml  network.yaml  security-groups.yaml  snapshots.yaml  subnets.yaml  volumes.yaml  vpcs.yaml
CloudHarvestPluginAws/templates/reports/aws/kms/: keys.yaml
CloudHarvestPluginAws/templates/reports/aws/lambda/: functions.yaml
CloudHarvestPluginAws/templates/reports/aws/lightsail/: instances.yaml
CloudHarvestPluginAws/templates/reports/aws/rds/: _get_logs.yaml  blue-green-deployments.yaml  clusters.yaml  engines.yaml  events.yaml  global-clusters.yaml  instances.yaml  logs-download.yaml  logs.yaml  parameter-groups.yaml  parameters.yaml  pending-maintenance-actions.yaml  proxies.yaml  snapshots.yaml
CloudHarvestPluginAws/templates/reports/aws/route53/: hosted-zones.yaml  recordsets.yaml
CloudHarvestPluginAws/templates/reports/aws/s3/: buckets.yaml
CloudHarvestPluginAws/templates/reports/aws/service-quotas/: quotas.yaml
CloudHarvestPluginAws/templates/reports/aws/sns/: subscriptions.yaml  topics.yaml
CloudHarvestPluginAws/templates/reports/aws/sqs/: queues.yaml
CloudHarvestPluginAws/templates/reports/aws/support/: cases.yaml  communications.yaml
CloudHarvestPluginAws/templates/services/: README.md
CloudHarvestPluginAws/templates/services/aws/dms/: endpoints.yaml  events.yaml  instances.yaml  tasks.yaml
CloudHarvestPluginAws/templates/services/aws/dynamodb/: tables.yaml
CloudHarvestPluginAws/templates/services/aws/ec2/: instance-types.yaml  instances.yaml  security-groups.yaml  snapshots.yaml  subnets.yaml  volumes.yaml  vpcs.yaml
CloudHarvestPluginAws/templates/services/aws/kms/: keys.yaml
CloudHarvestPluginAws/templates/services/aws/lambda/: functions.yaml
CloudHarvestPluginAws/templates/services/aws/lightsail/: instances.yaml
CloudHarvestPluginAws/templates/services/aws/rds/: blue-green-deployments.yaml  clusters.yaml  engines.yaml  events.yaml  global-clusters.yaml  instances.yaml  major-engine-versions.yaml  parameters-cluster.yaml  parameters-instance.yaml  pending-maintenance-actions.yaml  proxies.yaml  snapshots-cluster.yaml  snapshots-instance.yaml
CloudHarvestPluginAws/templates/services/aws/route53/: hosted-zones.yaml
CloudHarvestPluginAws/templates/services/aws/s3/: buckets.yaml
api-plugin-aws/: authenticators.py  exceptions.py  tasks.py
(+7761 files in other folders)
