[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CloudHarvestPluginAws", "CloudHarvestPluginAws.*"]
include-package-data = true

[tool.setuptools.package-data]
CloudHarvestPluginAws = [
    "templates/**/*.yaml",
    "pyproject.toml",
]

[project]
authors = [ "Cloud Harvest", "Fiona June Leathers" ]
classifiers = [ "Programming Language :: Python :: 3.13" ]
description = "This is the AWS Plugin for CloudHarvest."
homepage = "https://github.com/Cloud-Harvest/CloudHarvestPluginAws"
license = { file = "LICENSE" }
name = "CloudHarvestPluginAws"
version = "0.5.3"
